# swagger/v1/swagger.yaml
@@ -377,6 +377,202 @@ paths:
                         tertiary:
                           type: string
                           description: Color terciario
+  "/countries":
+    get:
+      summary: Lista de Paises
+      tags:
+      - Paises
+      parameters:
+      - name: per_page
+        in: query
+        description: Cantidad de elementos por página
+        schema:
+          type: string
+      - name: page
+        in: query
+        description: Página
+        schema:
+          type: string
+      - name: q
+        in: query
+        description: |+
+          Búsqueda por:
+
+            * Nombre de Depositante
+
+        schema:
+          type: string
+      - name: from
+        in: query
+        schema:
+          type: string
+          format: date
+        description: 'Rango: Fecha Inicial'
+      - name: to
+        in: query
+        schema:
+          type: string
+          format: date
+        description: 'Rango: Fecha Final'
+      - name: filter_range_date
+        in: query
+        schema:
+          type: string
+          enum:
+          - created_at
+          - updated_at
+          - start_date
+          - end_date
+        description: |+
+          Rango: Usar
+
+            * **[created_at]** Fechas de Creación de los Registros <small>*(Por defecto)*</small>
+            * **[updated_at]** Fechas de Actualización de los Registros
+
+      - name: sort
+        in: query
+        schema:
+          type: string
+          enum:
+          - created_at:desc
+          - created_at:asc
+          - updated_at:desc
+          - updated_at:asc
+        description: |+
+          #### Ordenar:
+
+            * **[created_at:desc]** Últimos creados al inicio
+            * **[created_at:asc]** Últimos creados al final
+            * **[updated_at:desc]** Últimos actualizados al inicio
+            * **[updated_at:asc]** Últimos actualizados al final
+
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Lista de Paises
+          headers:
+            Per-page:
+              type: integer
+              description: Total de elementos por página
+            Total:
+              type: integer
+              description: Total de elementos
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/country"
+    post:
+      summary: Crear País
+      tags:
+      - Paises
+      parameters: []
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: País creado
+        '422':
+          description: Error al crear País
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                country[name]:
+                  type: string
+                  description: Nombre
+                country[banner]:
+                  type: string
+                  format: binary
+                  description: Archivo de Foto jpg jpeg gif png
+                country[iso]:
+                  type: string
+                  description: Iso
+                country[var_name]:
+                  type: string
+                  description: Nombre en el Sistema
+                country[code_phone]:
+                  type: string
+                  description: Código celular
+                country[language]:
+                  type: string
+                  description: Idioma
+                country[code]:
+                  type: string
+                  description: Código
+                country[capital]:
+                  type: string
+                  description: Capital
+  "/countries/{id}":
+    get:
+      summary: Detalle de un País
+      tags:
+      - Paises
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: País encontrado
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/country"
+        '404':
+          description: País no encontrado
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
+    delete:
+      summary: Eliminar País
+      tags:
+      - Paises
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: País eliminado
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Estado
+                  message:
+                    type: string
+                    description: Mensaje o descripción
+                  data:
+                    "$ref": "#/components/schemas/country"
+        '422':
+          description: Error al eliminar País
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/unprocessable_entity"
+        '404':
+          description: País no encontrada
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
   "/users":
     get:
       summary: Lista de Usuarios
@@ -718,6 +914,46 @@ components:
             district:
               type: string
               description: Distrito
+      required:
+      - id
+    country:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: ID
+        name:
+          type: string
+          description: Nombre
+        code:
+          type: string
+          description: Código
+        iso:
+          type: string
+          description: Iso
+        var_name:
+          type: string
+          description: Nombre en el Sistema
+        code_phone:
+          type: string
+          description: Código celular
+        language:
+          type: string
+          description: Idioma
+        banner:
+          type: string
+          description: Bandera
+        capital:
+          type: string
+          description: Capital
+        created_at:
+          type: string
+          format: date-time
+          description: Fecha de creación
+        updated_at:
+          type: string
+          format: date-time
+          description: Fecha de actualización
       required:
       - id
 ...
